backstage-software-templates/python-application/template/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-application
spec:
  rules:
  - host: "python-application.test.com"
    http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: python-application
              port:
                number: 8080
